<resources>
    <string name="app_name">tomorrow</string>
    <string name="login">login</string>
    <string name="login_button">login button</string>
    <string name="email">email</string>
    <string name="forgot_password">forgot password</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"></string>
    <string name="todo5" />
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_customer_secound">CustomerSecound</string>
    <string name="title_activity_staff_interface">Staff_Interface</string>
    <string name="title_activity_staff">Staff</string>
    <string name="id">ID:</string>
    <string name="sing_out">SING OUT</string>
    <string name="title_activity_main_activityabc">MainActivityabc</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>